# Scripts.FileProcessor

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  noxfile.py  pyproject.toml  pyrightconfig.json  test_output.txt
.github/: codeowners  configuration.md  contributing.md  copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md  readme.md  security.md
.github/instructions/: cicd.instructions.md  python.instructions.md  testing.instructions.md  workspace.instructions.md
.github/issue_template/: bug_report.md  bug_report.yml  config.yml  documentation.yml  feature_request.md  feature_request.yml  performance_issue.md  plugin_request.yml
.github/prompts/: code-review.prompt.md  create-project.prompt.md  fix-quality.prompt.md  write-tests.prompt.md
.github/pull_request_template/: pull_request_template.md
.github/workflows/: ci-cd.yml  codeql.yml  labeler.yml  readme.md  release.yml
config/: config_example.yaml  default_config.yaml  dependency_config.yaml  file_processing_suite_config.yaml
docs/: README.md
docs/architecture/: ARCHITECTURE.md
docs/guides/: CONFIGURATION_GUIDE.md  CONTRIBUTING_DEV.md  CROSS_PLATFORM_GUIDE.md  DEPENDENCY_MANAGEMENT_GUIDE.md  DEVELOPER_DOCUMENTATION.md  DOCKER_GUIDE.md  INSTALLATION_GUIDE.md  MIGRATION_GUIDE_V6.md  PASSWORD_SCANNER_GUIDE.md  PASSWORD_SCANNER_IMPLEMENTATION.md  PERFORMANCE_TUNING_GUIDE.md  PLUGIN_DEVELOPMENT_GUIDE.md  PLUGIN_SDK.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  QUICK_START.md  SPRINT_2_PLAN.md  STANDALONE_PROCESSOR_README.md  SYSTEM_LEVEL_DEPLOYMENT_GUIDE.md  WSL_INSTALLATION_GUIDE.md
docs/releases/: CODE_CONSOLIDATION_REPORT.md  CROSS_PLATFORM_COMPLETE.md  CROSS_PLATFORM_DEPLOYMENT_REPORT.md  CROSS_PLATFORM_ENHANCEMENT_SUMMARY.md  ENHANCEMENT_PLAN.md  FEATURE_LIST.md  FINAL_PRODUCTION_RELEASE_SUMMARY.md  PRODUCTION_CLEANUP_SUMMARY.md  PRODUCTION_DEPLOYMENT_READY.md  PRODUCTION_RELEASE_SUMMARY_V6.md  PROJECT_SPEC_GENERICIZATION_SUMMARY.md  README_v7.md  RELEASE_NOTES.md  RELEASE_NOTES_V6.md  REORGANIZATION_COMPLETE.md  SPRINT_1_SUMMARY.md  V4_IMPLEMENTATION_SUMMARY.md  V6_ENHANCEMENT_SUMMARY.md  VALIDATION_REPORT.md  VERIFICATION_COMPLETE.md  WORKSPACE_OPTIMIZATION_SUMMARY.md  WORLD_CLASS_ENHANCEMENT_PLAN.md
examples/plugins/example_image_optimizer/: README.md  __init__.py  manifest.json  plugin.py
examples/plugins/example_pdf_processor/: README.md  __init__.py  manifest.json  plugin.py
examples/plugins/example_text_analyzer/: README.md  __init__.py  manifest.json  plugin.py
src/file_processor/: __init__.py  __main__.py
src/file_processor/api/: __init__.py  routes.py  server.py
src/file_processor/cli/: __init__.py  main.py
src/file_processor/core/: advanced_async_processor.py  advanced_metadata_extractor.py  advanced_series_grouper.py  advanced_similarity.py  base.py  enhanced_deduplicator.py  enhanced_filename_processor.py  enhanced_format_support.py  enhanced_password_scanner.py  enhanced_performance_manager.py  feature_registry.py  file_utils.py  hardware_detector.py  intelligent_cache_system.py  ml_infrastructure.py  password_protected_processor.py  plugin_system.py  processor.py  results.py  smart_imports.py  unified_utilities.py  zero_copy_operations.py
src/file_processor/plugins/: __init__.py  manager.py  plugin_marketplace.json
src/file_processor/plugins/plugins/myplugin/: manifest.json
src/file_processor/plugins/plugins/text_analyzer/: manifest.json
src/file_processor/utils/: __init__.py  config_loader.py
tests/: README.md  conftest.py
tests/integration/: test_cli_integration.py  test_processing.py
tests/unit/: test_base.py  test_cli.py  test_config.py  test_file_utils.py  test_plugin_manager.py  test_results.py
