# =============================================================================
# file-processor — pyproject.toml
# =============================================================================

# =============================================================================
# BUILD SYSTEM
# =============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/file_processor"]

# =============================================================================
# PROJECT METADATA
# =============================================================================

[project]
name = "file-processor"
version = "7.0.0"
description = "General-purpose file processing pipeline — apply transformations, filters, and operations to file sets."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = [
    "file-processing",
    "cli",
    "automation",
    "batch",
    "deduplication",
    "conversion",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=6.0.1",
    "tqdm>=4.66.0",
    "typing-extensions>=4.8.0",
    "Pillow>=10.1.0",
    "psutil>=5.9.5",
    "aiofiles>=23.2.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "rapidfuzz>=3.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "pytest-asyncio>=0.21",
    "hypothesis>=6.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "bandit>=1.7",
]

[project.scripts]
file-processor = "file_processor.cli.main:main"

# =============================================================================
# RUFF - Fast Python Linter & Formatter (recommended over flake8/black/isort)
# =============================================================================

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "T20", # flake8-print (no print() in production)
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function calls in argument defaults
    "S101",   # use of assert — allowed in tests
    "S603",   # subprocess without shell=True check — handled manually
    "S607",   # starting a process with a partial executable path
    "T201",   # print found — allow in CLI entry points
    "ARG002", # unused method argument — common in callbacks/APIs
    "N818",   # Exception name should end in Error — informational exceptions OK
    "RUF001", # ambiguous unicode character — intentional in string content
    "S311",   # non-cryptographic random — acceptable in non-security contexts
    "RUF012", # mutable class default — addressed per-module as needed
    "B017",   # assert-raises-exception — acceptable in simple tests
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true
split-on-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG", "T201"]
"**/conftest.py" = ["S101", "ARG"]
"**/gui*.py" = ["T201"]
"**/cli*.py" = ["T201"]
"**/__main__.py" = ["T201"]
"**/api/**/*.py" = [
    "ARG001",
] # FastAPI dependency-injection args are intentionally unused
"**/core/**/*.py" = ["ARG004", "ARG001"] # abstract / hook method signatures

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

# =============================================================================
# MYPY - Static Type Checker
# =============================================================================

[tool.mypy]
python_version = "3.11"
# Start with standard and tighten per-project
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
strict_equality = true
# Don't require type annotations everywhere — opt in per project
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
# Ignore missing stubs for third-party packages
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Tests don't need full typing
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
# GUI code tolerates dynamic attributes
module = "*.gui*"
disallow_untyped_calls = false
warn_return_any = false

[[tool.mypy.overrides]]
# Common packages with incomplete stubs
module = [
    "tomli",
    "yaml",
    "pydantic.*",
    "rich.*",
    "click.*",
    "uvicorn.*",
    "fastapi.*",
    "jinja2.*",
    "PIL.*",
    "imagehash",
    "psutil.*",
    "send2trash",
    "darkdetect",
    "win32.*",
    "winreg",
    "comtypes.*",
    "tkinter.*",
]
ignore_missing_imports = true

# =============================================================================
# PYTEST - Test Runner
# =============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--import-mode=importlib",
    "--cov=src/file_processor",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=90",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "performance: marks tests as performance benchmarks",
    "wsl: marks tests specific to WSL environment",
    "windows: marks tests specific to Windows",
    "linux: marks tests specific to Linux",
    "gui: marks tests that require a display",
    "network: marks tests that require network access",
    "admin: marks tests that require administrator/root privileges",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# COVERAGE - Code Coverage
# =============================================================================

[tool.coverage.run]
source = ["src/file_processor"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/conftest.py",
    "*/__main__.py",
    "*/setup.py",
    "*/legacy_archive/*",
    "*/scripts/*",
    "*/deployment/*",
    # Advanced optional modules requiring unavailable hardware/dependencies
    "*/core/advanced_async_processor.py",
    "*/core/advanced_metadata_extractor.py",
    "*/core/advanced_series_grouper.py",
    "*/core/advanced_similarity.py",
    "*/core/enhanced_deduplicator.py",
    "*/core/enhanced_filename_processor.py",
    "*/core/enhanced_format_support.py",
    "*/core/enhanced_password_scanner.py",
    "*/core/enhanced_performance_manager.py",
    "*/core/feature_registry.py",
    "*/core/hardware_detector.py",
    "*/core/intelligent_cache_system.py",
    "*/core/ml_infrastructure.py",
    "*/core/password_protected_processor.py",
    "*/core/plugin_system.py",
    "*/core/smart_imports.py",
    "*/core/unified_utilities.py",
    "*/core/zero_copy_operations.py",
    "*/api/routes.py",
    "*/api/server.py",
    "*/api/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "@overload",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# =============================================================================
# BLACK - Code Formatter (kept for compatibility; prefer ruff format)
# =============================================================================

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]
include = '\\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | external
  | archive
)/
'''

# =============================================================================
# ISORT - Import Sorter (kept for compatibility; prefer ruff lint I rules)
# =============================================================================

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["src"]
skip_glob = ["*/external/*", "*/archive/*", "*/.venv/*", "*/venv/*"]

# =============================================================================
# PYLINT - Additional Linting (optional, slower than ruff)
# =============================================================================

[tool.pylint."messages_control"]
disable = [
    # Style issues — handled by ruff
    "C0103", # invalid-name
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
    "C0301", # line-too-long (handled by formatter)
    # Design warnings — too strict for script projects
    "R0903", # too-few-public-methods
    "R0913", # too-many-arguments
    "R0914", # too-many-locals
    # Common patterns we explicitly allow
    "W0613", # unused-argument (callbacks/APIs)
    "W0603", # global-statement (singletons)
    "W0212", # protected-access (tests)
    "W0621", # redefined-outer-name (pytest fixtures)
    "W0718", # broad-exception-caught (defensive)
    "W1510", # subprocess-run-check (handled manually)
    "W1404", # implicit-str-concat (long strings)
    "W0201", # attribute-defined-outside-init (ctypes/tkinter)
    "C0415", # import-outside-toplevel (lazy imports)
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-branches = 20
max-statements = 80
max-args = 10
max-locals = 25

# =============================================================================
# HYPOTHESIS - Property-Based Testing
# =============================================================================

[tool.hypothesis]
# Default profile for local dev — fast
database = ".hypothesis/db"

[tool.hypothesis.settings]
max_examples = 100
deadline = 5000
suppress_health_check = ["too_slow", "data_too_large"]
deriving = true

# Use "ci" profile in CI environments via @settings(profile="ci")
# profiles.ci.max_examples = 500 is set per test file

# =============================================================================
# BANDIT - Security Linting
# =============================================================================

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "venv",
    "external",
    "archive",
    "build",
    "dist",
]
skips = [
    "B101", # assert_used — acceptable in tests
    "B603", # subprocess_without_shell_equals_true — handled manually
    "B607", # start_process_with_partial_path — handled manually
]

# (build-system defined at top of file)
